# geotils

./: .gitignore  CHANGELOG.md  README.md  main.py  masker_issue.ipynb  post_process.py  pyproject.toml  requirements.txt  segmentation_mAP.py  setup.py
.github/workflows/: publish-to-pypi.yml  unit-tests.yml
Augmentation/: coloring  coloring.py  cropping.py  filtering.py  resizing.py  transform.py
Data_processing/: post_process.py  split_to_folds.py
Dataset/: FloodNet_Dataset.py
Generate Masks/: Maskers.py
Losses/: losses.py
Metrics/: meters.py  metrics.py
ToBeChecked/: DemoTransformation_py.py  Demo_SAMGhandour.ipynb  Demo_SAMMayladan.ipynb  OCR.py  SAMutils.py  SolarPotentialutils.py  TransformCoordinates.py  more_transormations.py  pred_SAM.py  preprocess_massachusetts_data.ipynb
ToBeChecked/metrics/: evaluate.py  meters.py  metrics.py
ToBeChecked/models/: Unet_W_Mods.py
ToBeChecked/utils/: utils.py
augmentation/: cropping.py
data/n1/: n1.dbf  n1.shx
data/output/: 2_31_score.json
data/output_mask/n1_11/: n1_11.dbf
data/output_mask/n1_48/: n1_48.shp
data/output_mask/n1_49/: n1_49.shp  n1_49.shx
data/output_mask/n1_71/: n1_71.shx
data/output_mask/n1_93/: n1_93.shx
data/output_mask/n1_97/: n1_97.shp
data/output_mask/n1_99/: n1_99.shp  n1_99.shx
data_processing/: augmentation.py  conversion.py  cropping.py  make_dataset.py  masker.py  poly_conv.py  polygon_utility.py  post_process.py  pre_processing.py  preprocessing.py  resizing.py  split_data.py  splitting.py  test.py  test_augmentation.py  test_cropping.py  test_make_dataset.py  test_masker.py  test_poly_conv.py  test_post_process.py  test_preprocess.py  test_resizing.py  tile_utils.py
data_processing/generate_masks/: Masker.py  Maskers.py  masker.py
data_processing/temp1_test/: dummy_image.tif
dataset/: data_loader.py  sentinel_1_reader.py
docs/source/: conf.py  geotils.data_processing.rst  geotils.dataset.rst  geotils.datasets.examples.rst  geotils.datasets.rst  geotils.evaluation.rst  geotils.logging.rst  geotils.losses.rst  geotils.models.rst  geotils.optimizers.over9000.rst  geotils.optimizers.rst  geotils.rst  geotils.schedulers.rst  geotils.visualization.rst  index.rst  modules.rst
generate_masks/: masker.py
geotils/: __init__.py  geotils-debug.ipynb  masker_issue.ipynb  utils.py
geotils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
geotils/ToBeChecked/losses/: losses.py
geotils/ToBeChecked/metrics/: evaluate.py  meters.py  metrics.py  test_evaluate.py  test_meters.py  test_metrics.py
geotils/ToBeChecked/models/: ASPP.py
geotils/ToBeChecked/utility/: modify_contact_spacing.py  utils.py
geotils/data_processing/: augmentation.py  cropping.py  data_processing_utils.py  masker.py  polygon_utility.py  post_process.py  pre_processing.py  resizing.py  splitting.py  test_make_dataset.py  test_masker.py  test_polygon_utility.py  test_preprocess.py  test_resizing.py  test_splitting.py  tile_utils.py  transform_coordinates.py
geotils/data_processing/pre_processing/: Datum_Transform.py  Mosaic.py  batch.py  masking.py  pansharp.py  pre_processing.py
geotils/dataset/: FloodNet_Dataset.py  Geobase.py  Geotorch_datasets.py  sentinel_1_reader.py  sentinel_2_reader.py
geotils/dataset/testing/: Massachusetts_Buildings_Dataset.py  Unittest.py  vlm.py
geotils/datasets/: Geobase.py  README.txt  __init__.py
geotils/datasets_/: Geobase.py  Geotorch_datasets.py
geotils/datasets_/old_dataset_classes/: sentinel_2_reader.py
geotils/evaluation/: coco_IoU_cIoU.py  evaluate.py  meters.py  metrics.py  tmp.py
geotils/logging/: configuration.py  test_configuration.py
geotils/losses/: losses.py
geotils/models/: OCR.py  Unet_W_Mods.py
geotils/optimizers/: __init__.py  adamw.py  test_optimizer.py
geotils/optimizers/over9000/: __init__.py  adabelief.py  adamod.py  adan.py  apollo.py  diffgrad.py  lamb.py  lookahead.py  madam.py  madgrad.py  novograd.py  radam.py
geotils/schedulers/: __init__.py  polylr.py  test_scheduler.py
geotils/testing-framework/: test_RA_modules.py  test_Unet.py  test_augmentation.py  test_dataset.py  test_losses.py  test_lovasz.py  test_make_dataset.py  test_models.py  test_ocr.py  test_polygon_utility.py  test_post_process.py  test_preprocess.py  test_resizing.py  test_sam.py  test_scheduler.py  test_visualization.py
geotils/testing-framework/Integration_test/: create_data.py  crop.py  image.py  maskers_test.py  post.py  pre.py  sizing.py  spliting.py  test_logging.py  test_visualization.py
geotils/testing-framework/Unittest/: test_cropping.py  test_evaluate.py  test_make_dataset.py  test_masker.py  test_meters.py  test_metrics.py  test_resizing.py  test_splitting.py
geotils/testing-framework/assets/: configs.yaml  file.tif  table.csv
geotils/testing-framework/integration_tests/: create_data.py  crop.py  post.py  pre.py  sizing.py  tiles.py
geotils/testing-framework/unittests/: _test_optimizer.py  test_RA_modules.py  test_augmentation.py  test_cropping.py  test_dataset.py  test_evaluate.py  test_losses.py  test_lovasz.py  test_make_dataset.py  test_masker.py  test_meters.py  test_metrics.py  test_models.py  test_ocr.py  test_polygon_utility.py  test_post_process.py  (+4 more)
geotils/visualization/: color_map.py  masking.py  visualization.py
losses/: losses.py
models/: RA_modules.py
optimization/: optimizer.py  optimizer_maker.py
optimizers/: __init__.py  test.py  test_optimers.py
optimizers/over9000/: lookahead.py  losses.py  metrics.py  ranger.py
scheduler/: PolyLR.py
schedulers/: __init__.py  polylr.py  test.py
utililities/: TransformCoordinates.py  utils.py  visualization.py
utils/: configuration.py  poly_conv.py
visualization/: masking.py  visualize.py
(+882 files in other folders)
