[build-system]
requires = [
    "setuptools >= 61.0",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "geotils"
dynamic = ["version"]
dependencies = [
        'albumentations==1.3.1',
        'fiona==1.9.5',
        'matplotlib==3.8.0',
        'numpy==1.26.1',
        'opencv-python==4.8.1.78',
        'opencv-python-headless==4.8.1.78',
        'pandas==2.1.1',
        'Pillow==10.1.0',
        'scipy==1.11.3',
        'seaborn==0.13.1',
		'segment-anything',
        'shapely==2.0.2',
        'tifffile==2023.9.26',
        'timm==0.9.2',
        'torchvision==0.16.0',
        'tqdm==4.66.1',
]
requires-python = ">=3.10"
authors = [
  {name = "GEOAI group", email = "geotils@geogroup.ai"},
]
maintainers = [
  {name = "GEOAI group", email = "geotils@geogroup.ai"},
]
description = "geotils by GEOAI group"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["geotils", "geospatial", "earth observation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

#[tool.setuptools.dynamic]
#version = {attr = "geotils.__version__"}

[tool.versioningit]

#define "distance" format to be compatible with both PyPI and Test PyPI
[tool.versioningit.format]
distance = "{base_version}.post{distance}"

[project.urls]
Homepage = "https://geogroup.ai/"
Documentation = "https://readthedocs.org/geotils"
Repository = "https://github.com/geoaigroup/geotils"
"Bug Tracker" = "https://github.com/geoaigroup/geotils/issues"
Changelog = "https://github.com/geoaigroup/geotils/blob/master/CHANGELOG.md"

[project.scripts]
geotils = "geotils.module:function"