[build-system]
requires = [
    "setuptools >= 61.0",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "geotils"
dynamic = ["version"]
dependencies = [
        'numpy==1.26.1 ',
	'geopandas==0.14.4',
	'shapely==2.0.4',
	'scikit-learn==1.5.0',
	'tabulate==0.9.0',
	'timm==0.9.2',
	'torchvision==0.18.1',
	'rasterio==1.3.10',
	'scikit-image==0.24.0',
	'matplotlib==3.9.0',
	'affine==2.4.0',
	'opencv-python==4.10.0.84',
	'simplification==0.7.10',
	'imantics==0.1.12',
	'torchgeo==0.5.2',
	'segmentation-models-pytorch==0.3.3',
	'pystac==1.10.1',
	'mercantile==1.2.1',
	'supermercado==0.2.0',
	'scipy==1.13.1',
	'fiona==1.9.6',
	'pandas==2.2.2',
	'pillow==10.3.0',
	'tifffile==2023.9.26',
	'tqdm==4.66.4',
	'albumentations==1.3.1',
	'opencv-python-headless==4.8.1.78',
	'seaborn==0.13.1',
	'icecream==2.1.3',
]
requires-python = ">=3.10"
authors = [
  {name = "GEOAI group", email = "geotils@geogroup.ai"},
]
maintainers = [
  {name = "GEOAI group", email = "geotils@geogroup.ai"},
]
description = "geotils by GEOAI group"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["geotils", "geospatial", "earth observation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]

#[tool.setuptools.dynamic]
#version = {attr = "geotils.__version__"}

[tool.versioningit]

#define "distance" format to be compatible with PyPI and Test PyPI notations
[tool.versioningit.format]
distance = "{base_version}.post{distance}"

[project.urls]
Homepage = "https://geogroup.ai/"
Documentation = "https://readthedocs.org/geotils"
Repository = "https://github.com/geoaigroup/geotils"
"Bug Tracker" = "https://github.com/geoaigroup/geotils/issues"
Changelog = "https://github.com/geoaigroup/geotils/blob/master/CHANGELOG.md"

[project.scripts]
geotils = "geotils.module:function"
